--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "weather-api",
+  "name": "metcast",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://your-website.github.io/star-db",
+  "homepage": "https://your-website.github.io/metcast",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
